Adding first test to check for empty value

--- a/KataCalculatorTrialRun1.Tests/KataCalculatorTrialRun1.Tests.csproj
+++ b/KataCalculatorTrialRun1.Tests/KataCalculatorTrialRun1.Tests.csproj
@@ -58,11 +58,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CalculatorTests.cs" />
+    <Compile Include="CalculatorOutputTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KataCalculatorTrialRun1\KataCalculatorTrialRun1.csproj">
+      <Project>{eba2c97f-18ba-4c81-93bc-3d7b3f3910ba}</Project>
+      <Name>KataCalculatorTrialRun1</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
